@@ -64,7 +64,7 @@ public final class PruneColumns extends Rule<LogicalPlan, LogicalPlan> {
                             if (aggregate.groupings().isEmpty()) {
                                 p = new LocalRelation(
                                     aggregate.source(),
-                                    List.of(Expressions.attribute(aggregate.aggregates().getFirst())),
+                                    List.of(Expressions.attribute(aggregate.aggregates().get(0))),
                                     LocalSupplier.of(
                                         new Block[] { BlockUtils.constantBlock(PlannerUtils.NON_BREAKING_BLOCK_FACTORY, null, 1) }
                                     )
